# rs-dma-uml-collab-diagram

./: Cargo.toml  build.rs
src/: main.rs  mainwindow.slint
